<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pedido">

    <TextView
            android:text="@string/txtPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <Button
            android:text="@string/CleanPed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toStartOf="@+id/button6"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            android:layout_marginBottom="96dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/but_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:onClick="Inicio"/>
    <Button
            android:text="@string/MakePed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/button4"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:layout_marginBottom="96dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ListView
            android:layout_width="368dp"
            android:layout_height="316dp" android:layout_marginBottom="96dp"
            app:layout_constraintBottom_toTopOf="@+id/button5" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>